[B]3.0.X[/B]
- Utilize certifi for net module
- Add ability to save locally unencrypted m3u8 ts video content
- Update user agent strings
- Change the way kodi version is obtained

[B]2.9.X[/B]
- Net module taken from ResolveURL and adapted
  > Deprecate client.request function
- Add futures for compatibility
- Utilize futures on youtube module (default maximum workers 5)
- Remove caching from library itself
- Update user agent strings
- Tweaks in compat module
- Fixes in the bookmarking functions
- Various other compatibility fixes

[B]2.8.X[/B]
- Replaced xbmc.python import with xbmc.addon for Matrix compatibility
- New utils module
- Updated user agent strings
- Updated m3u8 modules
- Various fixes & tweaks for Kodi 19

[B]2.7.X[/B]
- New cache functions (taken from ResolveURL and adapted)
- Various other tweaks

[B]2.6.X[/B]
- Removed cloudflare related functions as they need too frequent updates
- Improved parsers module
- Added feed parser & thumbmaker into youtube module
- Logging module tweaks
- Updated user agents
- Allow some modules to be used outside of Kodi as standalone ones
- Allow nextitem to have title and/or name property
- Add ability to clear all bookmarks at once
- Add integer labels as optional parameters
- Moved a few functions from client to other modules
- Added the quote paths function, useful for non ascii characters in urls
- Fix in url_dispatcher module
- Added a few functions into control module
- A few changes for Kodi 19+

[B]2.5.X[/B]
- Tweaks in client module (updated cfscrape & some minor other tweaks)
- Added the parsers module
- Moved parseDOM into parsers module, retained import
- Moved replaceHTMLCodes into cleantitle module
- Added the boolean to disable verification of certificate in directory.resolve function
- Various other tweaks

[B]2.4.X[/B]
- User agents module tweaks
- Addition of ability to autoplay through a playlist mode
- Added some debug logging for client.request and directory.add
- Removed some unused functions